# ep1-ia

./: main.py  pyproject.toml  requirements.txt
notebooks/: dataset.ipynb
src/: dataset.py
