[tool.poetry]
name = "ia-ep1"
version = "0.1.0"
description = ""
authors = ["Antonio Souza <antonios16020@gmail.com>"]
readme = "README.md"
packages = [{include = "ia_ep1"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
